force-app/main/default/objects/Food_Supply_Tracing__c/Food_Supply_Tracing__c.object-meta.xml
<CustomObject>
    <label>Food Supply Tracing</label>
    <nameField>
        <label>Food  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Supply Tracing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>