force-app/main/default/objects/Food_Supply_Tracing__c/fields/Affected_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Affected_Lot_Number__c</fullName>
    <label>Affected Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>