force-app/main/default/objects/Food_Supply_Tracing__c/fields/Food_Source__c.field-meta.xml
<CustomField>
    <fullName>Food_Source__c</fullName>
    <label>Food Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imported and Sold As Is</fullName>
            </value>
            <value>
                <fullName>Imported and Processed Locally</fullName>
            </value>
            <value>
                <fullName>Locally Manufactured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>