force-app/main/default/objects/Food_Supply_Tracing__c/fields/Is_Exported__c.field-meta.xml
<CustomField>
    <fullName>Is_Exported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exported</label>
    <type>Checkbox</type>
</CustomField>