force-app/main/default/objects/Food_Supply_Tracing__c/fields/Reason_for_Tracing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Tracing__c</fullName>
    <label>Reason for Tracing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Contamination</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>